# anonymiser

./: .gitignore  CLAUDE.md  CODEOWNERS  Cargo.toml  Cargo.toml.bak  LICENSE  README.md  build  build_and_test  create_release_for_linux  create_release_in_docker  create_releases  flake.nix  test  update_version
.circleci/: config.yml
.cursor/: BUGBOT.md
.github/workflows/: ci.yml
release_scripts/aarch64-apple-darwin/: create_release
release_scripts/x86_64-apple-darwin/: create_release
release_scripts/x86_64-unknown-linux-gnu/: create_release
release_scripts/x86_64-unknown-linux-musl/: .dockerignore  create_release
scripts/: setup_for_debian
src/: anonymiser.rs  compression_type.rs  file_reader.rs  fixer.rs  helpers.rs  main.rs  opts.rs  test_builders.rs  uncompress.rs
src/fixers/: db_mismatch.rs  fixer.rs  mod.rs  validation.rs
src/parsers/: copy_row.rs  create_row.rs  custom_classifications.rs  data_row.rs  db_schema.rs  mod.rs  national_insurance_number.rs  rng.rs  row_parser.rs  sanitiser.rs  state.rs  strategies.rs  strategies_parser.rs  strategy_errors.rs  strategy_file.rs  strategy_file_parser.rs  strategy_file_reader.rs  strategy_structs.rs  strategy_validator.rs  transformer.rs  types.rs
test_files/: dump_file.sql  results.sql  strategy.json
