# The version here is only used for builds in dev.. the create_release script will replace this for release builds
[package]
name = "anonymiser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16 = "0.2.1"
base32 = "0.5.1"
chrono = "0.4"
itertools = "0.14.0"
fake = "2.4"
flate2 = { version = "1.1.0", features = ["zlib-ng"], default-features = false }
lazy_static = "1.5.0"
native-tls = "0.2.12"
postgres = "0.19.9"
postgres-native-tls = "0.5.0"
rand = { version = "0.8", features = ["small_rng"] }
regex = "1"
sha256 = "1.1.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
uuid = { version = "1.11", features = [ "v4"] }
mimalloc = "0.1.43"
log = "0.4.22"
zstd = "0.13.2"
colored = "2.1.0"
sha2 = "0.10"

[dev-dependencies]
pretty_assertions = "1.4.0"
